Added file upload

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,27 @@ fastapi
 motor
 uvicorn
 pydantic-settings
+
+annotated-types
+anyio
+bcrypt
+cffi
+click
+colorama
+cryptography
+fastapi
+h11
+idna
+passlib
+pycparser
+pydantic
+pydantic_core
+PyJWT
+ruff
+sniffio
+starlette
+typing_extensions
+uvicorn
+
+cloudinary
+python-multipart
