--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,45 @@
-fastapi
-motor
-uvicorn
-pydantic-settings
-
-annotated-types
-anyio
-bcrypt
-cffi
-click
-colorama
-cryptography
-fastapi
-h11
-idna
-passlib
-pycparser
-pydantic
-pydantic_core
-PyJWT
-ruff
-sniffio
-starlette
-typing_extensions
-uvicorn
-
-cloudinary
-python-multipart
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+bcrypt==5.0.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cloudinary==1.44.1
+colorama==0.4.6
+cryptography==46.0.3
+debugpy==1.8.17
+defusedxml==0.7.1
+dnspython==2.8.0
+fastapi==0.122.0
+h11==0.16.0
+httpie==3.2.4
+idna==3.11
+markdown-it-py==4.0.0
+mdurl==0.1.2
+motor==3.7.1
+multidict==6.7.0
+passlib==1.7.4
+pycparser==2.23
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+PyJWT==2.10.1
+pymongo==4.15.4
+PySocks==1.7.1
+python-dotenv==1.2.1
+python-multipart==0.0.20
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.2.0
+ruff==0.14.6
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+starlette==0.50.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.38.0
