--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ multidict==6.7.0
 passlib==1.7.4
 pycparser==2.22
 pydantic==2.12.4
-pydantic_core==2.41.5
+pydantic-core==2.41.5
+pydantic-settings
 Pygments==2.19.2
 PyJWT==2.8.0
 PySocks==1.7.1
